agregue links a proyectos

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                                 <h5 class="card-title">Portafolio</h5>
                                 <p class="card-text">Elaboración de mi Portafolio personal en el curso de Technolochicas
                                     Pro, usando HTML y CSS.</p>
-                                <a href="https://clon-de-google-isa.netlify.app" target="_blank"
+                                <a href="https://lovely-semolina-9c7fca.netlify.app" target="_blank"
                                     class="btn btn-secondary bg-black ">Link</a>
                             </div>
                         </div>
@@ -229,7 +229,7 @@
                                 <h5 class="card-title">Primer Pagina Web</h5>
                                 <p class="card-text">Elaboración de mi primer página web en el curso de Technolochicas
                                     Pro, con ayuda de heramientas como HTML y CSS.</p>
-                                <a href="https://clon-de-google-isa.netlify.app" target="_blank"
+                                <a href="https://videosanimales.netlify.app" target="_blank"
                                     class="btn btn-secondary bg-black ">Link</a>
                             </div>
                         </div>
