--- a/index.html
+++ b/index.html
@@ -74,12 +74,14 @@
                             capacidad cognitiva. Amo los deportes y actividades manuales que me permiten aprovechar el
                             máximo de
                             mi potencial. El trabajo en equipo es esencial para un éxito laboral.</p>
-                        <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-                            <button type="button"
-                                class="btn btn-outline-danger btn-lg px-4 me-md-2 fw-bold  ">Contáctame</button>
-                            <button type="button"
-                                class="btn btn-outline-secondary btn-lg px-4 ">isabel.garco04@gmail.com</button>
+                        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                            <a class="btn btn-outline-danger btn-lg px-4 me-md-2 fw-bold"
+                                href="mailto:isabel.garco04@gmail.com " target="_blank" role="button">Contáctame</a>
+                            <a class="btn btn-outline-secondary btn-lg px-4"
+                                Subject="Interés%20en%20tus%20proyectos%20-%20Contacto%20Web">isabel.garco04@gmail.com</a>
                         </div>
+
+
                     </div>
                     <div class="col-lg-4 offset-lg-0 p-1 overflow-hidden ">
                         <img class="" height="600px"
@@ -282,7 +284,7 @@
                 <div class="col d-flex align-items-start">
                     <div class="bi text-dark flex-shrink-0 me-3" width="1.75em" height="1.75em"> </div>
                     <div>
-                        <h3 class="fw-bold mb-3 fs-4 text-body-emphasis"> Inglés       </h3>
+                        <h3 class="fw-bold mb-3 fs-4 text-body-emphasis"> Inglés </h3>
                         <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="75"
                             aria-valuemin="0" aria-valuemax="100">
                             <div class="progress-bar bg-black w-75"></div>
@@ -357,12 +359,12 @@
             </li>
 
             <li class="nav-item fs-1">
-                <a href="https://github.com/Bell-Garcia" target="_blank" class="nav-link px-5 text-body-secondary">
+                <a href="https://www.linkedin.com/in/isabel-garc%C3%ADa-contreras-ab8592304/" target="_blank" class="nav-link px-5 text-body-secondary">
                     <i class="bi bi-linkedin text-secondary"></i>
                 </a>
             </li>
             <li class="nav-item fs-1 ">
-                <a href="https://github.com/Bell-Garcia" target="_blank" class="nav-link px-5 text-body-secondary">
+                <a href="https://www.instagram.com/bellgarc15/" target="_blank" class="nav-link px-5 text-body-secondary">
                     <i class="bi bi-instagram text-secondary"></i>
                 </a>
             </li>
