cambio de testimonios

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                     <div class="carousel-item  ">
                         <article class="container text-center">
                             <img src="assets/perhom1.png" height="200" alt="...">
-                            <h3 class="my-3"> Gustavo Meillón </h3>
+                            <h3 class="my-3"> Juan García </h3>
                             <p>"Destaca por su capacidad para resolver problemas de manera eficiente y creativa,
                                 aportando soluciones innovadoras en situaciones desafiantes."
                         </article>
